# LegionHealthHackathonGediminasP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  desktop-snapshot.md  docker-compose.yml  pyproject.toml  vercel.json
.claude/: settings.json
.githooks/: pre-commit  pre-push
.github/workflows/: check.yml
agent-reports/: agent.md  api.md  claude-review.md  codex-review.md  fresh-agent.md  frontend-open.md  grok-setup.md  guided-review-visible-text.txt  medication-affordability-agent-led-v2.md  medication-affordability-implementation-plan.md  medication-affordability-tech-plan.md  review-fix.md  ui.md
alembic/: env.py
alembic/versions/: 0001_create_items.py  0002_medication_affordability.py  0003_artifact_metadata.py  0004_session_access_token.py
app/: config.py  db.py  main.py
app/agents/: __init__.py  assistant.py  medication_affordability.py
app/models/: __init__.py  item.py  medication_affordability.py
app/routers/: agent.py  health.py  items.py  medication_affordability.py
app/schemas/: __init__.py  item.py  medication_affordability.py
app/services/: items.py  medication_affordability_resources.py  medication_affordability_search.py  medication_affordability_sessions.py
docs/medication-affordability-agent/: 01-product-scope.md  README.md  (+7 more)
frontend/: index.html  package-lock.json  package.json
prompts/: assistant.md  medication_affordability.md
specs/: README.md  hackathon-starter.md
tests/: conftest.py  test_agent.py  test_health.py  test_items.py  test_medication_affordability.py
(+41 files in other folders)
